<resources>
    <string name="app_name">CatedraDSM</string>
    <!-- LOGIN -->
    <string name="login_correo">Correo Electrónico</string>
    <string name="login_contra">Contraseña</string>
    <string name="login_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="login_crear_cuenta">¿No posees una cuenta? ¡Registrate!</string>
    <!-- CITAS -->
    <string name="cita_titulo">Agendar una Cita</string>
    <string name="cita_ver_titulo">Ver una Cita</string>
    <string name="cita_paciente">Nombre Completo</string>
    <string name="cita_sucursal">Sucursal</string>
    <string name="cita_motivo">Motivo</string>
    <string name="cita_estilista">Seleccione un estilista</string>
    <string name="cita_fecha">Fecha de la cita</string>
    <string name="cita_hora">Hora de la cita</string>
    <!-- BOTONES -->
    <string name="boton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_volver">Volver</string>
    <!--    CREAR CUENTA-->
    <string name="nombre_crear_cuenta">Nombre</string>
    <string name="apellido_crear_cuenta">Apellido</string>
    <string name="telefono_crear_cuenta">Teléfono</string>
    <string name="correo_electronico_crear_cuenta">Correo electrónico</string>
    <string name="contrasena_crear_cuenta">Contraseña</string>
    <string name="repetir_contrasena_crear_cuenta">Repetir contraseña</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="txt_inicia_sesion_crear_cuenta">¿Ya tienes una cuenta? inicia sesión</string>
    <!--    CONFIGURACION DE CUENTA-->
    <string name="btn_cerrar_sesion_configuracion_de_cuenta">Cerrar sesión</string>
    <string name="btn_guardar_datos_configuracion_de_cuenta">Guardar datos</string>
    <string name="btn_volver_a_inicio_configuracion_de_cuenta">Volver a inicio</string>
    <!-- VENTANA INICIO -->
<<<<<<< HEAD
<<<<<<< HEAD
=======
    <string name="inicio_saludo">Snips!</string>
>>>>>>> origin/Daniel
=======
    <string name="inicio_saludo">Snips!</string>
>>>>>>> 96e67c62cf57c9a853910334d79c416ae3a80264
    <string name="inicio_agendar_cita">Agendar Cita</string>
    <string name="inicio_ver_vita">Ver Citas</string>
    <string name="btn_agendar_cita">Agendar Citas</string>
    <string name="btn_ver_cita">Ver Cita</string>
    <string name="btn_configurar_cuenta">Configurar Cuenta</string>
    <string name="btn_cerrar_sesion">Cerrar Sesion</string>
</resources>