<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_principal"
    tools:context=".vista_inicio">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/linear_layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
<<<<<<< HEAD
<<<<<<< HEAD
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="hola usuario"/>
=======
                android:text="@string/inicio_saludo"
                android:textAlignment="center"
                android:textSize="30sp" />
>>>>>>> origin/Daniel
=======
                android:text="@string/inicio_saludo"
                android:textAlignment="center"
                android:textSize="30sp" />
>>>>>>> 96e67c62cf57c9a853910334d79c416ae3a80264

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/tijera"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/inicio_agendar_cita"
                    android:src="@drawable/agendar_cita" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/inicio_ver_vita"
                    android:src="@drawable/ver_citas" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAgregarCita"
                    style="@style/boton_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#BCB1B7"
                    android:text="@string/btn_agendar_cita" />

                <Button
                    android:id="@+id/btnVerCitas"
                    style="@style/boton_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#BCB1B7"
                    android:text="@string/btn_ver_cita" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/configurar" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/salir" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfigurarCuenta"
                    style="@style/boton_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#BCB1B7"
                    android:text="@string/btn_configurar_cuenta" />

                <Button
                    android:id="@+id/btnCerrarSesion"
                    style="@style/boton_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#BCB1B7"
                    android:text="@string/btn_cerrar_sesion" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>