<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        android:src="@mipmap/logo2" />


    <EditText
        android:id="@+id/txtCorreo"
        android:textColor="@color/secundario"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/login_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/txtPassword"
        android:textColor="@color/secundario"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/login_contra"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@color/terciario"
        android:textColor="@color/secundario"
        android:text="@string/login_iniciar_sesion"
        android:textSize="20sp"
        android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786"
        android:paddingVertical="20dp"/>

    <TextView
        android:id="@+id/txtCrearCuenta"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:text="@string/login_crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/secundario"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

</androidx.constraintlayout.widget.ConstraintLayout>